# uAT

./: README.md  uat_freertos.c  uat_parser.h
.github/workflows/: tests.yml
Core/Inc/: uat_freertos.h  uat_parser.h
Core/Src/: uat_parser.c
tests/: .gitignore  CMakeLists.txt  README.md  debug_intarray  debug_intarray.c  debug_test  debug_test.c  test_freertos.c  test_parser.c
tests/framework/: test_framework.c  test_framework.h
tests/mocks/: FreeRTOS.h  cmsis_os.h  freertos_mock.c  freertos_mock.h  main.h  semphr.h  stm32_hal_mock.c  stm32_hal_mock.h  stm32f756xx.h  stm32f7xx_hal.h  stm32f7xx_hal_uart.h  stream_buffer.h  task.h  usart.h
